--- a/custom.css
+++ b/custom.css
@@ -6,6 +6,8 @@
 /* =============== GENERAL =============== */
 body {
 	 background: url(../../../images/fespa/background.gif) top left repeat !important ;
+	 BACKGROUND:NONE;
+	 
 }
 
 a {
