--- a/custom.css
+++ b/custom.css
@@ -6,7 +6,9 @@
 /* =============== GENERAL =============== */
 body {
 	 background: url(../../../images/fespa/background.gif) top left repeat !important ;
-	 BACKGROUND:NONE;
+
+/* modded by Julius */
+background:none;
 	 
 }
 
